# kodo-python

./: .gitignore  CMakeLists.txt  LICENSE.rst  LICENSE_EVALUATION.rst  LICENSE_RESEARCH.rst  NEWS copy.rst  NEWS.rst  RASPBERRY_GUIDE.rst  README.rst  buildbot.py  config.py  giit.json  resolve.json  setup.cfg  setup.py  waf  wscript
.github/workflows/: cmake.yml  linux_waf.yml
docs/: LICENSE_EVALUATION.rst  LICENSE_RESEARCH.rst  conf.py  index.rst  license.rst  quick_start.rst  readme.rst  requirements.in  requirements.txt
docs/api/: api.rst  block_decoder.rst  block_encoder.rst  block_generator_parity_2d.rst  block_generator_random_uniform.rst  block_generator_rs_cauchy.rst  block_generator_tunable.rst  finite_field.rst  fulcrum_decoder.rst  fulcrum_encoder.rst  fulcrum_generator_random_uniform.rst  perpetual_decoder.rst  perpetual_encoder.rst  perpetual_generator_random_uniform.rst  perpetual_offset_random_sequence.rst  perpetual_offset_random_uniform.rst  perpetual_offset_sequential_sequence.rst  perpetual_width.rst  slide_decoder.rst  slide_encoder.rst  slide_generator_random_uniform.rst  slide_rate_controller.rst
docs/code_examples/: block_lena.rst  code_examples.rst  hello_world.rst  multicast_example.rst  parity_2d_encode_decode.rst  perpetual_encode_decode_simple.rst  perpetual_save_restore_decoder.rst  rlnc_encode_decode.rst  rlnc_encode_decode_recode.rst  rs_cauchy_encode_decode.rst
examples/: benchmark.py  encode_decode_simple.py  encode_decode_using_coefficients.py  encode_on_the_fly.py  encode_pure_recode_decode_simple.py  encode_recode_decode_simple.py  fulcrum.py  hello_world.py  kodo_helpers.py  kodo_python_getting_started.ipynb  lena.py  minimal_overhead.py  multicast_receiver_example.py  multicast_sender_example.py  perpetual.py  print_coefficients.py  pure_recode_payload_api.py  pure_recode_symbol_api.py  pykodo.py  sliding_window.py  switch_systematic_on_off.py  symbol_status_updater.py  udp_unicast.py  use_trace_layers.py
examples/block/: lena.py  parity_2d_encode_decode.py  rlnc_encode_decode.py  rlnc_encode_recode_decode.py  rs_cauchy_encode_decode.py
examples/fulcrum/: fulcrum_encode_decode_simple.py
examples/perpetual/: encode_decode_simple.py  save_restore_decoder.py
examples/slide/: encode_decode_simple.py
src/kodo_python/: carousel_stacks.cpp  coder.hpp  create_helpers.hpp  decoder.hpp  encoder.hpp  factory.hpp  finite_field.hpp  fulcrum_stacks.cpp  full_vector_stacks.cpp  kodo.cpp  on_the_fly_stacks.cpp  optional_decoder_methods.hpp  optional_encoder_methods.hpp  perpetual_stacks.cpp  recoder.hpp  resolve_field_name.hpp  (+6 more)
test/: kodo_python_tests.py
tests/: test_block_encode_decode.py  test_block_generators.py  test_fulcrum_encode_decode.py  test_parity_2d.py  test_perpetual_encode_decode.py  test_slide_encode_decode.py  test_version.py
(+40 files in other folders)
