[metadata]
name = kodo
version = 19.0.0
author = Steinwurf ApS
author_email = contact@steinwurf.com
home_page = https://github.com/steinwurf/kodo-python
description = Python bindings for kodo
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Kodo Research/Evaluation License 1.2
license_files = LICENSE_EVALUATION.rst, LICENSE_RESEARCH.rst, LICENSE.rst
platform = any
keywords = low latency, rlnc, sliding window
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
project_urls = 
    Bug Tracker = https://github.com/steinwurf/kodo-python/issues
    Changelog = https://github.com/steinwurf/kodo-python/blob/master/NEWS.rst

[options]
zip_safe = false
setup_requires =
    setuptools
    wheel
    # setuptools >=30.3.0     # minimal version for `setup.cfg`
    # setuptools >=38.3.0     # version with most `setup.cfg` bugfixes

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = zip, gztar
